--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -40,7 +40,7 @@ a:link,a:visited {
   
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS464/mis_464_syllabus_spring_2019_revised.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
+<ul><li><a href="/courses/MIS464/mis_464_syllabus-spring_2020.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
 <li><a href="/courses/index.html">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
@@ -53,15 +53,15 @@ a:link,a:visited {
 <li><a href="#sessions">Lab Sessions and Guest Speakers</a></li>
 </ul></div>
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
-<p>See page 4 of the <a href="/courses/MIS464/mis_464_syllabus_spring_2019_revised.pdf" target="_blank">printable copy of the MIS 464 Syllabus</a> for the day by day course outline.</p>
+<p>See page 5 of the <a href="/courses/MIS464/mis_464_syllabus_spring_2020.pdf" target="_blank">printable copy of the MIS 464 Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
-<h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2019</h3>
+<h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2020</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
-<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 126 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
+<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 130 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
 Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
-Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://ailab-ua.github.io/courses/MIS464</a>  (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Mohammadreza Ebrahimi, <a href="mailto:ebrahimi@email.arizona.edu">ebrahimi@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> TA Office Hours: TA hours will be announced via email</p>
+Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://ailab-ua.github.io/courses/MIS464</a>  (VERY IMPORTANT!) <br />Teaching Assistants (TA): <br /> - (Reza) Mohammadreza Ebrahimi, <a href="mailto:ebrahimi@email.arizona.edu">ebrahimi@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at:<em>  </em><a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
 <li><em>Artificial Intelligence: A Modern Approach, </em>by Russel &amp; Norvig, 3rd Edition, 2000, Prentice Hall<em><br /></em></li>
@@ -69,41 +69,69 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 <li>Additional readings and handouts will be distributed in class and made available through the class web site.</li>
 </ul><h3><a name="objectives" id="objectives"></a>COURSE OBJECTIVES</h3>
 <p>Business intelligence and analytics and the related field of big data analytics have become increasingly important in both the academic and the business communities over the past two decades. The IBM Tech Trends Report identified business analytics as one of the four major technology trends in the 2010s and beyond. A report by the McKinsey Global Institute predicted that by 2018, the United States alone will face a shortage of 140,000 to 190,000 people with deep data analytical skills, as well as a shortfall of 1.5 million data-savvy managers with the know-how to analyze big data to make effective decisions. Big data and data science have begun to transform different facets of the society, from e-commerce and global logistics, to smart health and cyber security.</p>
-<p><strong>This undergraduate senior level course (elective) will cover the important concepts and techniques relating to data analytics, including: statistical foundation, data mining methods, data visualization, AI, deep learning, and web mining techniques that are applicable to emerging e-commerce, government, and health and security applications. </strong>The course contains lectures, readings, lab sessions, and hands-on projects. Most business school seniors are welcome. The course will require some basic computing and database background. The course will prepare students to become a data scientist or a data-savvy manager for different businesses.<strong><br /></strong></p>
+<p>This undergraduate senior level course (elective) will cover the important concepts and techniques related to data analytics, including: statistical foundation, data mining methods, data visualization, AI, deep learning, and web mining techniques that are applicable to emerging e-commerce, government, and health and security applications.</p>
+<p><strong>The course will be conducted in a graduate-level format, containing lectures, discussions, readings, lab sessions, and hands-on research projects. The course will support several diverse human and AI learning strategies: rote learning, learning by rules, learning from examples, learning by analogy, and learning by exploration.<strong><br /></strong></p>
+<p>Most business school seniors with proper background and interest are welcome. The course will require some basic computing (Python, Java) and database (SQL) background. The course will prepare students to become a data scientist or a data-savvy manager for different businesses. The Course Objectives include the following:</p>
+
 <h3><a name="prerequisite" id="prerequisite"></a>PREREQUISITE FOR THE COURSE</h3>
-<p>Programming experience in selected modern computing languages (e.g., Java, C, C++, Python) and DBMS (SQL).</p>
-<h3><a name="topics" id="topics"></a>COURSE TOPICS (selected topics will be covered)</h3>
-<h3>Topic 1: Introduction (the field of MIS &amp; CS)</h3>
-<ul><li>From computational design science in MIS to applied data science in CS</li>
-<li>Business intelligence and analytics, opportunities &amp; techniques</li>
-<li>Emerging AI applications, from face recognition to autonomous vehicle</li>
-<li>Data, text and web mining overview: AI, ML, deep learning</li>
-<li>Data mining and web computing tools (by TAs): Weka, Tableau, Hadoop, SPARK</li>
-</ul><h3>Topic 2: Web Mining (the changing world)</h3>
-<ul><li>Web 1.0, 1995-: WWW, search engines, surface web, spidering, graph search, genetic algorithms</li>
-<li>Web 2.0, 2005-: deep web, web services &amp; mesh-ups, social media, crowdsourcing systems, network sciences</li>
-<li>Web 3.0, 2010-: IoTs, mobile &amp; cloud computing, big data analytics, dark web, mobile analytics, cybersecurity</li>
-<li>Web 4.0, 2015-: AI-empowered society, image/face, translation, drones, autonomous vehicles, health, security</li>
-</ul><h3>Topic 3: Data Mining (the analytics techniques)</h3>
-<ul><li>Symbolic learning: decision trees, random forest</li>
-<li>Statistical analysis: regression, principal component analysis, Naïve Bayes</li>
-<li>Statistical machine learning: Support Vector Machine, Hidden Markov Models, Conditional Random Fields</li>
-<li>Neural networks and soft computing: feedforward networks, self-organizing maps, genetic algorithms</li>
-<li>Network analysis: social network analysis, graph models</li>
-<li>Deep learning: Convolutional NN, Recurrent NN, Long Short-Term Memory</li>
-<li>Representation learning: Transfer Learning, Deep Generative Models</li>
-</ul><h3>Topic 4: Text Mining (handling unstructured text)</h3>
-<ul><li>Digital library and search engines</li>
-<li>Information retrieval &amp; extraction: vector space model, entity &amp; topic extraction</li>
-<li>Authorship analysis: lexical, syntactic, structural, and semantic analysis</li>
-<li>Sentiment and affect analysis: lexicon-based, machine learning based</li>
-<li>Information visualization: scientific, text, and web visualization</li>
-</ul><h3>Topic 5: Emerging Research in Data and Web Mining (major conferences, groups, opportunities)</h3>
-<ul><li>Emerging research in major data and web mining conferences: ACM KDD, IEEE ICDM, WWW, ACM SIGIR, ACM CHI, AAAI, IJCAI, ICML, NIPS, ICLR</li>
-<li>Key journals: MISQ, ISR, IEEE TKDE, JAMIA, JBI, JASIST</li>
-<li>Emerging research in major academic institutions: Stanford, Berkeley, CMU, MIT</li>
-<li>Emerging research in major industry research labs: Google, Facebook, Amazon, Baidu, Microsoft</li>
-<li>Emerging data and web mining applications: health, security, e-commerce, AV, drones, robotics</li>
+<p>Programming experience in selected modern computing languages (e.g., Python, Java, C++) and DBMS (SQL). This course is hands-on (but not heavy hand-holding), with support from a knowledgeable TA. The workload will be somewhat heavy (10-15 hours per week on average); so only students who are interested in pursuing a career in data analytics should register for this course. The instructor will allow for sit-in or audit for selected students based on their background and interest.</p>
+<p><strong>Topic 1: Introduction (the field of MIS, CS; data analyst, data engineer, data scientist)</strong></p>
+<ul>
+  <li>From computational design science in MIS to applied data science in CS</li>
+  <li>Business intelligence and analytics, opportunities &amp; techniques</li>
+  <li>Emerging AI applications, from face recognition to autonomous vehicle</li>
+  <li>Data, text and web mining overview: AI, ML, deep learning</li>
+  <li>Data mining and web computing tools (by TAs): Tableau, Weka, Hadoop, SPARK&nbsp;</li>
+</ul>
+<p>&nbsp;</p>
+<p><strong>Topic 2: Web Mining/Computing (the changing “information/data” world; critical applications and underlying technologies)</strong></p>
+<ul>
+  <li>Web 1.0, Surface Web, 1995-: WWW, search engines, spidering, indexing/searching, graph search, genetic algorithms</li>
+  <li>Web 2.0, Social Web, 2005-: deep web, web services &amp; mesh-ups, social media, crowdsourcing systems, network sciences, recommender systems</li>
+  <li>Web 3.0, Mobile Web, 2010-: IoTs, mobile &amp; cloud computing, big data analytics, dark web, mobile analytics, cybersecurity</li>
+  <li>Web 4.0, AI Web, 2015-: AI-empowered society, 5G, image recognition, machine translation, smart home/city/health, cybersecurity, privacy, political disinformation, deepfake</li>
+</ul>
+<p><strong>&nbsp;</strong></p>
+<p><strong>Topic 3: Data Mining (the analytics techniques; machine learning, deep learning)</strong></p>
+<ul>
+  <li>Symbolic learning: decision trees, random forest</li>
+  <li>Statistical analysis: regression, Principal Component Analysis (PCA), Naïve Bayes</li>
+</ul>
+<p>&nbsp;</p>
+<ul>
+  <li>Statistical machine learning: Support Vector Machines (SVM), Hidden Markov Models (HMM), Conditional Random Fields (CRF), Matrix Factorization</li>
+  <li>Neural networks and soft computing: Feedforward-Backpropagation networks (FFBP NN), Self-Organizing Maps (SOM), Genetic Algorithms</li>
+  <li>Network Analysis: social network analysis (SNA), graph models</li>
+  <li>Deep learning: Convolutional NN, Recurrent NN, Long Short-Term Memory</li>
+  <li>Representation Learning: Transfer Learning, Deep Generative Models</li>
+</ul>
+<p>&nbsp;</p>
+<p><strong>Topic 4: Text Mining (handling unstructured text; a multilingual world)</strong></p>
+<ul>
+  <li>Digital library and search engines</li>
+  <li>Information retrieval &amp; extraction: vector space model, entity &amp; topic extraction</li>
+  <li>Authorship analysis: lexical, syntactic, structural, and semantic analysis</li>
+</ul>
+<p>&nbsp;</p>
+<ul>
+  <li>Sentiment and affect analysis: lexicon-based, machine learning based</li>
+  <li>Topic modeling; word embeddings</li>
+  <li>Information visualization: scientific, text and web visualization</li>
+</ul>
+<p>&nbsp;</p>
+<p><strong>Topic 5: Future Directions in Data Analytics (major courses, conferences, groups, and opportunities)</strong></p>
+<ul>
+  <li>Other relevant UA MS/Ph.D. courses/programs: business intelligence (MIS587), DM/ML (MIS545, MATH574M, ECE523), web mining/computing (MIS510), big data (MIS584, MIS586), SNA (SOC526), statistical NLP (LINQ539), optimization (SIE545), econometrics (ECON418), etc.&nbsp;</li>
+  <li>Important news and scientific media: Science, Nature; The Economist, NYT, WSJ</li>
+  <li>Emerging research in major data and web mining conferences: NIPS, ICLR, ICML; AAAI, IJCAI; ACM KDD, IEEE ICDM, WWW; ACM SIGIR, ACM CHI</li>
+  <li>Key journals: MISQ, ISR, JMIS; IEEE TKDE, ACM TOIS; JAMIA, JBI, JASIST</li>
+  <li>Emerging research in major academic institutions: Stanford, Berkeley, CMU, UW</li>
+</ul>
+<p>&nbsp;</p>
+<ul>
+  <li>Emerging research in major industry research labs: Google, Facebook, Amazon, Netflix, Microsoft</li>
+  <li>Emerging data and web mining applications: smart health, smart city, e-commerce, AV, drones, robotics, 5G, privacy, political disinformation</li>
+</ul>
 </ul><h3><a name="grading" id="grading"></a>GRADING POLICY</h3>
 <ul><li>Project proposal: 5%</li>
 <li>Midterm exam:  30%</li>
