--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -75,7 +75,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 
 <h3><a name="prerequisite" id="prerequisite"></a>PREREQUISITE FOR THE COURSE</h3>
 <p>Programming experience in selected modern computing languages (e.g., Python, Java, C++) and DBMS (SQL). This course is hands-on (but not heavy hand-holding), with support from a knowledgeable TA. The workload will be somewhat heavy (10-15 hours per week on average); so only students who are interested in pursuing a career in data analytics should register for this course. The instructor will allow for sit-in or audit for selected students based on their background and interest.</p>
-<p><strong>Topic 1: Introduction (the field of MIS, CS; data analyst, data engineer, data scientist)</strong></p>
+<p><h3>Topic 1: Introduction (the field of MIS, CS; data analyst, data engineer, data scientist)</h3></p>
 <ul>
   <li>From computational design science in MIS to applied data science in CS</li>
   <li>Business intelligence and analytics, opportunities &amp; techniques</li>
@@ -84,7 +84,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
   <li>Data mining and web computing tools (by TAs): Tableau, Weka, Hadoop, SPARK&nbsp;</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>Topic 2: Web Mining/Computing (the changing “information/data” world; critical applications and underlying technologies)</strong></p>
+<p><h3>Topic 2: Web Mining/Computing (the changing “information/data” world; critical applications and underlying technologies)</h3></p>
 <ul>
   <li>Web 1.0, Surface Web, 1995-: WWW, search engines, spidering, indexing/searching, graph search, genetic algorithms</li>
   <li>Web 2.0, Social Web, 2005-: deep web, web services &amp; mesh-ups, social media, crowdsourcing systems, network sciences, recommender systems</li>
@@ -92,7 +92,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
   <li>Web 4.0, AI Web, 2015-: AI-empowered society, 5G, image recognition, machine translation, smart home/city/health, cybersecurity, privacy, political disinformation, deepfake</li>
 </ul>
 <p><strong>&nbsp;</strong></p>
-<p><strong>Topic 3: Data Mining (the analytics techniques; machine learning, deep learning)</strong></p>
+<p><h3>Topic 3: Data Mining (the analytics techniques; machine learning, deep learning)</h3></p>
 <ul>
   <li>Symbolic learning: decision trees, random forest</li>
   <li>Statistical analysis: regression, Principal Component Analysis (PCA), Naïve Bayes</li>
@@ -106,7 +106,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
   <li>Representation Learning: Transfer Learning, Deep Generative Models</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>Topic 4: Text Mining (handling unstructured text; a multilingual world)</strong></p>
+<p><h3>Topic 4: Text Mining (handling unstructured text; a multilingual world)</h3></p>
 <ul>
   <li>Digital library and search engines</li>
   <li>Information retrieval &amp; extraction: vector space model, entity &amp; topic extraction</li>
@@ -119,7 +119,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
   <li>Information visualization: scientific, text and web visualization</li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>Topic 5: Future Directions in Data Analytics (major courses, conferences, groups, and opportunities)</strong></p>
+<p><h3>Topic 5: Future Directions in Data Analytics (major courses, conferences, groups, and opportunities)</h3></p>
 <ul>
   <li>Other relevant UA MS/Ph.D. courses/programs: business intelligence (MIS587), DM/ML (MIS545, MATH574M, ECE523), web mining/computing (MIS510), big data (MIS584, MIS586), SNA (SOC526), statistical NLP (LINQ539), optimization (SIE545), econometrics (ECON418), etc.&nbsp;</li>
   <li>Important news and scientific media: Science, Nature; The Economist, NYT, WSJ</li>
@@ -132,27 +132,40 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
   <li>Emerging research in major industry research labs: Google, Facebook, Amazon, Netflix, Microsoft</li>
   <li>Emerging data and web mining applications: smart health, smart city, e-commerce, AV, drones, robotics, 5G, privacy, political disinformation</li>
 </ul>
-</ul><h3><a name="grading" id="grading"></a>GRADING POLICY</h3>
-<ul><li>Project proposal: 5%</li>
-<li>Midterm exam:  30%</li>
-<li>Extra credit assignments: 10%</li>
-<li>Review paper: 15%</li>
-<li>Research project: 40%</li>
-<li>Class attendance and participation: 10%</li>
-<li>Total: 110%</li>
+</ul><h3><a name="grading" id="grading"></a>GRADING POLICY (ABSOLUTE SCALE A: 90+; B: 80+; C: 70+; D 70-)</h3>
+<ul>
+  <li>Team project proposal (1/30): 5%</li>
+  <li>Team lab assignments (2/25; 4/7): 20% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li>Midterm exam (3/17): 30% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li>Team review paper (4/7): 15%</li>
+  <li>Team research project (4/28): 30% &nbsp; &nbsp; &nbsp; &nbsp;</li>
+  <li><u>Class attendance and participation : 10%</u></li>
+  <li>TOTAL : 110%</li>
+</ul>
 </ul><h3><a name="coursework" id="coursework"></a>COURSEWORK, EXAMS, AND ASSIGNMENTS</h3>
-<h3>MIDTERM EXAM (30%)</h3>
-<p>The midterm exam will be closed book, closed notes and in the short-essay format (8-10 questions). The questions will be based mostly on classroom lectures. There will be NO Final Exam for this class. Academic integrity will be strictly enforced. <span style="text-decoration: underline;"><strong>Consequences for cheating will be severe</strong></span>.</p>
-<h3>EXTRA CREDIT ASSIGNMENTS (10%)</h3>
-In order to improve students’ hands-on data analytics knowledge and to facilitate final project execution, we are adding two Extra Credit Assignments in this semester – the first on Tableau and the second on Weka. Each team is required to identify 1-2 public data sources (e.g., data.gov, Kaggle) in the application area of their final Research Project (e.g., security, health, finance, e-commerce) and execute selected meaningful data exploration/visualization or analytics functions. Each assignment is worth 5% of final grade. A team report summarizing results with screen shots (5 pages, IEEE format) needs to be submitted in two weeks for each assignment. No literature review is required.</p>
-<h3>REVIEW PAPER PRESENTATION AND PROPOSAL (20%)</h3>
-<p>Each student will be required to form a two-person team. Each team will select an emerging data analytics topic of interest and develop a comprehensive review paper for the topic. Secondary literature review will be needed based on recent papers published in press, magazines, conferences, and journals. Each team (both students) will be required to present their review in the second half of the semester (10 minutes each). The instructor will suggest selected emerging topics for consideration. A paper review and project proposal will be needed in the third week of the semester.</p>
-<h3>RESEARCH PROJECT PRESENTATION AND PAPER (40%)</h3>
-<p>Each team will be required to propose and execute a data-driven research project in data analytics for applications of interest to the students. The instructor will suggest suitable data and algorithms for consideration. The class TAs will also provide assistance in data preparation and analytics using selected open source tools. Each team (both students) will present at the end of the semester (15 minutes) and a final research paper (8 pages, IEEE format) will be submitted after all presentation sessions. The instructor will provide details about the final paper format and structure. Students are expected to gain significant hands-on data analytics experience through the project.</p>
-<h3><a name="integrity" id="integrity"></a>LECTURES, ATTENDANCE, AND ACADEMIC INTEGRITY</h3>
+<p><strong>TEAM PROJECT PROPOSAL (5%)</strong></p>
+<p>Each student will be required to form a two-person team with complementary skills (e.g., application knowledge, Python, SQL, analytics, presentation). A team proposal (3 pages, Word document) including plan for both review paper (see below) and research project (see below) will be submitted by each team in the third week of the semester. The proposal needs to justify the selection of application area and includes preliminary ideas or plan for execution.</p>
+<p><h3>&nbsp;</h3></p>
+<p><h3>TEAM LAB ASSIGNMENTS (20%)</h3></p>
+<p>In order to improve students’ hands-on data analytics knowledge and to facilitate final project execution, there will be two Team Lab Assignments: Tableau (visualization) and Weka (analytics), both are popular data analytics/visualization tools used by data analysts/scientists. Each team is required to identify 1-2 public or open data sources (e.g., data.gov, Kaggle; will be introduced in class) in the application area of their final Research Project (e.g., security, health, finance, e-commerce) and execute selected meaningful data exploration/visualization or analytics functions. Each assignment is worth 10% of final grade. A team report summarizing results with meaningful screen shots (5 pages, IEEE format; will be explained in class) needs to be submitted in two weeks for each assignment. Students are expected to become familiar with selected data extraction, analytics and visualization tools and software.</p>
+<p><h3>&nbsp;</h3></p>
+<p><h3>MIDTERM EXAM (30%)</h3></p>
+<p>The midterm exam will be closed book, closed notes and in the short-essay format. The questions will be based mostly on classroom lectures. There will be NO Final Exam for this class. Academic integrity will be strictly enforced. Consequences for cheating will be severe.</p>
+<p><h3>&nbsp;</h3></p>
+<p><h3>REVIEW PAPER AND PRESENTATION (15%)</h3></p>
+<p>Each team will select an emerging, specific data analytics application area of interest (e.g., health, finance, e-commerce, security) and develop a comprehensive review paper (5 pages, IEEE format) for the topic. Secondary literature review (10-20 references) will be needed based on recent papers published in major news media, magazines, conferences, and journals. Each team (both students) will be required to present their review in the second half of the semester (10 minutes with 8 slides). The instructor will suggest selected emerging application areas for consideration.&nbsp;</p>
+<p><h3>&nbsp;</h3></p>
+<p><h3>TEAM RESEARCH PROJECT PRESENTATION/PAPER (30%)</h3></p>
+<p>Each team will be required to propose and execute an interesting and meaningful data analytics research project for applications of interest to the students. The instructor will suggest suitable data and algorithms for consideration. The class TA will also provide assistance in data preparation and analytics using selected open source tools. Each team (both students) will present at the end of the semester (15 minutes with 12 slides) and a final research paper (8 pages, IEEE format) will be submitted after all presentation sessions. The instructor will provide details about the final paper format and structure. Students are expected to gain significant hands-on data analytics skills and knowledge and professional project communication and presentation experiences.&nbsp;</p>
+<p>&nbsp;</p>
+<p><h3>ATTENDANCE, PARTICIPATION AND ACADEMIC INTEGRITY (10%)</h3></p>
 <p>Students are required to attend all lectures on time and honor academic integrity. Missing classes will result in loss of points or administrative drop by the instructor. Students are required to send excuse notes (via email) to the instructor before missing classes. Students are permitted to bring laptop to classroom for note taking purposes, but not for checking email or web surfing. Professional attitude and strong work ethics are needed for this class. Students are encouraged to consult the instructor for advice and help.</p>
-<h3><a name="sessions" id="sessions"></a>LAB SESSIONS and GUEST SPEAKERS</h3>
-<p>Selected lab sessions will be provided during the semester on the following topics: web services, cloud computing platforms, Tableau, Weka, etc. Selected guest speakers will present in the class.</p>
+<p>&nbsp;</p>
+<p><h3>LAB SESSIONS and GUEST SPEAKERS</h3></p>
+<p>Selected lab sessions will be provided by the class TA during the semester on the following topics: Python, Tableau, Weka, etc. Selected guest speakers may be invited to present in the class.</p>
+<p><strong>&nbsp;</strong></p>
+<p><h3>D2L CLASS SUPPORT</h3></p>
+<p>The class will be supported by D2L (by class TA) in the following areas: (1) class announcements, assignments, and email to the entire class, (2) students submitting assignments, papers, and presentation slides online, (3) grade postings and notifications for all students, (4) optional periodic quizzes to gauge students’ progress and understanding.</p>
 </div></div></div>
 <hr>  
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/departments-research/centers-labs/artificial-intelligence">AI Lab Website</a>
