--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -70,7 +70,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 </ul><h3><a name="objectives" id="objectives"></a>COURSE OBJECTIVES</h3>
 <p>Business intelligence and analytics and the related field of big data analytics have become increasingly important in both the academic and the business communities over the past two decades. The IBM Tech Trends Report identified business analytics as one of the four major technology trends in the 2010s and beyond. A report by the McKinsey Global Institute predicted that by 2018, the United States alone will face a shortage of 140,000 to 190,000 people with deep data analytical skills, as well as a shortfall of 1.5 million data-savvy managers with the know-how to analyze big data to make effective decisions. Big data and data science have begun to transform different facets of the society, from e-commerce and global logistics, to smart health and cyber security.</p>
 <p>This undergraduate senior level course (elective) will cover the important concepts and techniques related to data analytics, including: statistical foundation, data mining methods, data visualization, AI, deep learning, and web mining techniques that are applicable to emerging e-commerce, government, and health and security applications.</p>
-<p><strong>The course will be conducted in a graduate-level format, containing lectures, discussions, readings, lab sessions, and hands-on research projects. The course will support several diverse human and AI learning strategies: rote learning, learning by rules, learning from examples, learning by analogy, and learning by exploration.<strong><br /></strong></p>
+<p><strong>The course will be conducted in a graduate-level format, containing lectures, discussions, readings, lab sessions, and hands-on research projects. The course will support several diverse human and AI learning strategies: rote learning, learning by rules, learning from examples, learning by analogy, and learning by exploration.</strong></p>
 <p>Most business school seniors with proper background and interest are welcome. The course will require some basic computing (Python, Java) and database (SQL) background. The course will prepare students to become a data scientist or a data-savvy manager for different businesses. The Course Objectives include the following:</p>
 
 <h3><a name="prerequisite" id="prerequisite"></a>PREREQUISITE FOR THE COURSE</h3>
@@ -111,9 +111,6 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
   <li>Digital library and search engines</li>
   <li>Information retrieval &amp; extraction: vector space model, entity &amp; topic extraction</li>
   <li>Authorship analysis: lexical, syntactic, structural, and semantic analysis</li>
-</ul>
-<p>&nbsp;</p>
-<ul>
   <li>Sentiment and affect analysis: lexicon-based, machine learning based</li>
   <li>Topic modeling; word embeddings</li>
   <li>Information visualization: scientific, text and web visualization</li>
