--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -58,7 +58,7 @@ a:link,a:visited {
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2020</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
-<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 130 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
+<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 130 <br />Instructor’s Office Hours: T/TH 10:45-11:45AM or by appointment <br />
 Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
 Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://ailab-ua.github.io/courses/MIS464</a>  (VERY IMPORTANT!) <br />Teaching Assistants (TA): <br /> - (Reza) Mohammadreza Ebrahimi, <a href="mailto:ebrahimi@email.arizona.edu">ebrahimi@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> TA Office Hours: TA hours will be announced via email</p>
