--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -88,7 +88,7 @@ readings are hosted on this permanent and open Github site. Class communications
 <ul>
   <li>Web 1.0, Surface Web, 1995-: WWW, search engines, spidering, indexing/searching, graph search, genetic algorithms</li>
   <li>Web 2.0, Social Web, 2005-: deep web, web services &amp; mesh-ups, social media, crowdsourcing systems, network sciences, recommender systems</li>
-  <li>Web 3.0, Mobile Web, 2010-: IoTs, mobile &amp; cloud computing, big data analytics, dark web, mobile analytics, cybersecurity</li>
+  <li>Web 3.0, Mobile Web, 2010-: IoTs, mobile &amp; cloud computing, big data analytics, dark web, mobile analytics, cybersecurity</li>
   <li>Web 4.0, AI Web, 2015-: AI-empowered society, 5G, image recognition, machine translation, smart home/city/health, cybersecurity, privacy, political disinformation, deepfake</li>
 </ul>
 <p><h3>Topic 3: Data Mining (the analytics techniques; machine learning, deep learning)</h3></p>
