--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -82,7 +82,7 @@ readings are hosted on this permanent and open Github site. Class communications
   <li>Business intelligence and analytics, opportunities &amp; techniques</li>
   <li>Emerging AI applications, from face recognition to autonomous vehicle</li>
   <li>Data, text and web mining overview: AI, ML, deep learning</li>
-  <li>Data mining and web computing tools (by TAs): Tableau, Weka, Hadoop, SPARK&nbsp;</li>
+  <li>Data mining and web computing tools (by TA): Tableau, Weka, Hadoop, SPARK&nbsp;</li>
 </ul>
 <p><h3>Topic 2: Web Mining/Computing (the changing “information/data” world; critical applications and underlying technologies)</h3></p>
 <ul>
