--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -73,6 +73,14 @@ readings are hosted on this permanent and open Github site. Class communications
 <p>This undergraduate senior level course (elective) will cover the important concepts and techniques related to data analytics, including: statistical foundation, data mining methods, data visualization, AI, deep learning, and web mining techniques that are applicable to emerging e-commerce, government, and health and security applications.</p>
 <p><strong>The course will be conducted in a graduate-level format, containing lectures, discussions, readings, lab sessions, and hands-on research projects. The course will support several diverse human and AI learning strategies: rote learning, learning by rules, learning from examples, learning by analogy, and learning by exploration.</strong></p>
 <p>Most business school seniors with proper background and interest are welcome. The course will require some basic computing (Python, Java) and database (SQL) background. The course will prepare students to become a data scientist or a data-savvy manager for different businesses. The Course Objectives include the following:</p>
+<ul>
+  <li>Students will become familiar with important data analytics, business intelligence, data mining, machine learning, and deep learning <strong>concepts, terminologies, techniques, and algorithms. (rote)</strong></li>
+  <li>Students will learn to use selected <strong>data analytics and visualization tools</strong> such as Tableau, Weka, and Python for relevant data analytics applications. <strong>(rules, analogy)</strong></li>
+  <li>Students will learn through <strong>team-based research projects</strong> to adopt and leverage state-of-the-art data extraction, analytics, and visualization methods in important applications and domains, including: business, e-commerce, finance, security and health. <strong>(examples, exploration)</strong></li>
+  <li>Students will learn to turn data into actionable business intelligence and explain and communicate results via <strong>professional presentation and paper</strong> in a scientific, business and managerial context. <strong>(analogy, exploration)</strong></li>
+  <li>Students will be introduced to an <strong>intellectual road map</strong> <strong>for growth in data analytics</strong>, including: future courses and graduate programs, key publications (conferences, journals, news media), major research groups, federal funding agencies, major companies and their underlying technologies, future applications, etc. <strong>(exploration)</strong></li>
+</ul>
+<p>The course will introduce students to a possible career as a data analyst (BS level) and a potential path to become a data engineer (MS level) or even a data scientist (mostly Ph.D. level) in the future.</p>
 
 <h3><a name="prerequisite" id="prerequisite"></a>PREREQUISITE FOR THE COURSE</h3>
 <p>Programming experience in selected modern computing languages (e.g., Python, Java, C++) and DBMS (SQL). This course is hands-on (but not heavy hand-holding), with support from a knowledgeable TA. The workload will be somewhat heavy (10-15 hours per week on average); so only students who are interested in pursuing a career in data analytics should register for this course. The instructor will allow for sit-in or audit for selected students based on their background and interest.</p>
@@ -147,6 +155,252 @@ readings are hosted on this permanent and open Github site. Class communications
 <p>Selected lab sessions will be provided by the class TA during the semester on the following topics: Python, Tableau, Weka, etc. Selected guest speakers may be invited to present in the class.</p>
 <p><h3>D2L CLASS SUPPORT</h3></p>
 <p>The class will be supported by D2L (by class TA) in the following areas: (1) class announcements, assignments, and email to the entire class, (2) students submitting assignments, papers, and presentation slides online, (3) grade postings and notifications for all students, (4) optional periodic quizzes to gauge students’ progress and understanding.</p>
+
+   </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Web 3.0, Mobile Web, IoT, dark web</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>LAB 1 DUE (TABLEAU, 10%)</strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Feb 27</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Web 4.0, AI Web, 5G, privacy</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 3 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong><u>Data Mining</u></strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 5</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Symbolic learning, AI, decision trees</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>ID3, RF</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 9-13</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>SPRING RECESS</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>NO CLASS</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 17 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>MIDTERM EXAM (30%)</strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 19</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Statistical analysis, regression, Bayes</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>&nbsp;Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 24 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong>Weka,&nbsp;</strong>DM tools</p>
+      </td>
+      <td width="31%" valign="bottom">
+        <p>&nbsp;<strong>TA session/lab</strong></p>
+      </td>
+      <td width="8%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 26</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Statistical ML, SVM, CRF&nbsp;</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Mar 31 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Neural networks, Backprop, SOM</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 2</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Deep learning, CNN</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 7 (T)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>REVIEW PAPER/PRESENTATION (15%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>&nbsp;</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>LAB 2 DUE (WEKA, 10%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 9</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>REVIEW PAPER/PRESENTATION</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 14 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Deep learning, LSTM</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 16</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p><strong><u>Text Mining</u></strong></p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Overview, discussions</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 21 (T)</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>IE, Sentiment analysis, Topic modeling</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 23</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>Information Visualization</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>Readings, lecture</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 28 (T)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RESEARCH PROJECT PRESENTATION (15%)</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>Apr 30</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RESEARCH PROJECT PRESENTATION</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>May 5 (T)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RRESEARCH PROJECT PRESENTATION</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>May 8-14</p>
+      </td>
+      <td colspan="2" width="47.5%" valign="bottom">
+        <p>FINAL EXAM WEEK</p>
+      </td>
+      <td colspan="2" width="39%" valign="bottom">
+        <p>NO EXAM FOR MIS 464</p>
+      </td>
+    </tr>
+    <tr>
+      <td width="13.5%" valign="bottom">
+        <p>May 8 (F)</p>
+      </td>
+      <td colspan="4" width="86.5%" valign="bottom">
+        <p><strong>RESEARCH PROJECT PAPER DUE (15%)</strong></p>
+      </td>
+    </tr>
+  </tbody>
+</table>
 </div></div></div>
 <hr>  
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/departments-research/centers-labs/artificial-intelligence">AI Lab Website</a>
