--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ a:link,a:visited {
 
 <li><a href="/courses/resources/IoT-Device-Security-DRAFT.pptx" target="_blank">IoT Device Security</a>, by Steve Ullman, 2019.</li>
 <li><a href="/courses/resources/Cyber Threat Intelligence.pptx" target="_blank">Cyber Threat Intelligence</a>, by Sagar Samtani and Hsinchun Chen, 2019</li>
-<li><a href="/courses/resources/Computational-Propaganda-Module-DRAFT.pptx" target="_blank">Computational Propaganda and Political Disinformation</a>, by Zara AhmadPost and Stve Ullman, 2019.</li>
+<li><a href="/courses/resources/Computational-Propaganda-Module-DRAFT.pptx" target="_blank">Computational Propaganda and Political Disinformation</a>, by Zara AhmadPost and Steve Ullman, 2019.</li>
 
 
 
