--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ a:link,a:visited {
 
 
 
-</ol><li><a href="/courses/MIS510/webapptutorial.ppt">Introduction to Web Application and APIs</a> (Revised by Jonathan Jiang and Julian Guo):</li>
+<li><a href="/courses/MIS510/webapptutorial.ppt">Introduction to Web Application and APIs</a> (Revised by Jonathan Jiang and Julian Guo):</li>
 <ol><li><a href="/courses/MIS510/flickr.rar">Flickr Photo Search API Sample Code</a></li>
 <li><a href="/courses/MIS510/amazoneditorialreview.rar">Amazon Product Advertising API Sample Code</a></li>
 <li><a href="/courses/MIS510/youtube.rar">YouTube Data API Sample Code</a></li>
