--- a/index.html
+++ b/index.html
@@ -221,21 +221,21 @@ a:link,a:visited {
 <li><a href="/courses/resources/nyt_chess_playing_machine.pdf" target="_blank">One Giant Step for a Chess-Playing Machine</a> (New York Times, Strogatz, 2018)</li>
 <li><a href="/courses/resources/science_alphazero_december_2018.pdf" target="_blank">A General Reinforcement Learning Algorithm That Masters Chess, Shogi, and Go Through Self-play</a> (Science, Silver et al., 2018)</li>
 <li><a href="/courses/resources/chen_deep_learning_april_2015.pptx">Deep Learning: An Overview</a> (Weifeng Li, Victor Benjamin, Xiao Liu, and Hsinchun Chen, 2016)</li>
-<li><a href="/courses/MIS611D/chen_lda_april_2016.pptx">Topic Modeling and Latent Dirichlet Allocation: An Overview</a> (Weifeng Li, Sagar Samtani, and Hsinchun Chen, 2016)</li>
 <li><a href="/courses/resources/intro-to-cnn-190415.pptx">An Introduction to Convolutional Neural Networks: Overview, Implementation, and Example</a> (Shuo Yu and Hsinchun Chen, 2019)</li>
 <li><a href="/courses/resources/recurrent_neural_networks_april_2019.pptx" target="_blank">An Introduction to Recurrent Neural Networks: Overview, Implementation, and Application</a> (Hongyi Zhu and Hsinchun Chen, April 2019)</li>
 <li><a href="/courses/resources/sagar_autoencoder_overview_sagar.pptx">Autoencoders: Overviews and Selected Application</a> (Sagar Samtani and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/reza_deeptransferlearning.pptx" target="_blank">An Introduction to Deep Transfer Learning</a> (Mohammadreza Ebrahimi and Hsinchun Chen, 2018)</li>
-<li><a href="/courses/resources/wf_topic_modeling.pptx" target="_blank">An Overview of Topic Modeling</a> (Weifeng Li and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/chai_wf_deep_generative_models.pptx" target="_blank">Deep Generative Models: An Overview</a> (Yidong Chai, Weifeng Li, and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/artificial_intelligence_and_deep_learning_lee_giles.ppt" target="_blank">Artificial Intelligence and Deep Learning</a> (Lee Giles, 2018)</li>
 <li><a href="/courses/resources/representation_learning_lee_giles.pptx" target="_blank">Representation Learning</a> (Alexander G. Ororbia II and Lee Giles, 2018)</li>
 
 </ol><h3>TOPIC 4: Text Mining (Sentiment Analysis, Topic Modeling, Visualization)</h3>
-<ol><li><a href="/courses/MIS510/24_presentation-information-visulization-2005.ppt">Information Visualization</a></li>
+<ol><li><a href="/courses/resources/text_mining_review_april_2019.pptx" target="_blank">Text Mining: Techniques, Tools, Ontologies and Shared Tasks</a> (Xiao Liu, Shuo Yu, Hsinchun Chen, 2019)</li>
+<li><a href="/courses/resources/wf_topic_modeling.pptx" target="_blank">An Overview of Topic Modeling</a> (Weifeng Li and Hsinchun Chen, 2018)</li>
+<li><a href="/courses/MIS611D/chen_lda_april_2016.pptx">Topic Modeling and Latent Dirichlet Allocation: An Overview</a> (Weifeng Li, Sagar Samtani, and Hsinchun Chen, 2016)</li>
+<li><a href="/courses/MIS510/24_presentation-information-visulization-2005.ppt">Information Visualization</a></li>
 <li><a href="/courses/MIS510/16_information_visualization_for_digital_library.ppt">Information Visualization for Digital Library</a> (2.21M)</li>
 <li><a href="/courses/resources/visualizing_data_april_2019.pptx">Visualizing Data: Frameworks and Examples</a> (Hongyi Zhu, Sagar Samtani, Hsinchun Chen, Spring 2019)</li>
-<li><a href="/courses/resources/text_mining_review_april_2019.pptx" target="_blank">Text Mining: Techniques, Tools, Ontologies and Shared Tasks</a> (Xiao Liu, Shuo Yu, Hsinchun Chen, 2019)</li>
 </ol>
 <h3>TOPIC 5: Emerging Research in Data and Web Mining (for MIS 611D)</h3>
 <ol><li>COPLINK, Dark Web, and Hacker Web: A Research Path in Security Informatics, by Dr. Hsinchun Chen</li>
